test/functions/bradc/intents/intents-strings.error1.good
intents-strings.chpl:4: In function 'foo':
intents-strings.chpl:7: error: illegal lvalue in assignment
